syntax = "proto3";

package magmasc;

option go_package = "github.com/0chain/gosdk/zmagmacore/magmasc/pb";

message Provider {
  string ID = 1;      // @gotags: json:"id" yaml:"id"
  string ExtID = 2;   // @gotags: json:"ext_id" yaml:"ext_id"
  string Host = 3;    // @gotags: yaml:"host"
}
